# llm-tui

./: Cargo.toml  main.py  readme.md
src/: backup.rs  main.rs
